cmake_minimum_required(VERSION 3.20)
project(vanity C)

set(SECP256K1_DIR "${CMAKE_SOURCE_DIR}/secp256k1")

# secp256k1 options
set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreaded CACHE STRING "" FORCE) # Silence LNK4217 warnings
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(SECP256K1_INSTALL OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_ECDH OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_RECOVERY OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_EXTRAKEYS OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_SCHNORRSIG OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_MUSIG OFF CACHE BOOL "" FORCE)
set(SECP256K1_ENABLE_MODULE_ELLSWIFT OFF CACHE BOOL "" FORCE)
set(SECP256K1_BUILD_BENCHMARK OFF CACHE BOOL "" FORCE)
set(SECP256K1_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(SECP256K1_BUILD_EXHAUSTIVE_TESTS OFF CACHE BOOL "" FORCE)
set(SECP256K1_BUILD_CTIME_TESTS OFF CACHE BOOL "" FORCE)
set(SECP256K1_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory(${SECP256K1_DIR})

add_executable(vanity src/vanity.c)

target_compile_definitions(vanity PRIVATE SECP256K1_STATIC)

target_include_directories(vanity PRIVATE
    ${SECP256K1_DIR}/include
)

target_link_libraries(vanity PRIVATE
    secp256k1
    bcrypt
)

set_target_properties(vanity PROPERTIES
    MSVC_RUNTIME_LIBRARY MultiThreaded
    INTERPROCEDURAL_OPTIMIZATION TRUE
)
